messages.properties update

--- a/authorization/src/main/resources/messages.properties
+++ b/authorization/src/main/resources/messages.properties
@@ -12,8 +12,9 @@ NotBlank.signupForm.userName=Please enter {0}
 
 
 # Birthday validation
+signupForm.birthday= Birthday
 typeMismatch.signupForm.birthday=Please enter in MM/DD/YYYY format
-NotNull.signupForm.birthday=Please enter {0}
+NotNull.signupForm.birthday=Please enter your {0}
 
 
 # Age validation
