messages.properties update

--- a/authorization/src/main/resources/messages.properties
+++ b/authorization/src/main/resources/messages.properties
@@ -7,12 +7,12 @@ Email.signupForm.userId=Please enter your email address in {0}
 
 
 # User Name validation
-signupForm.userName= User name
+signupForm.userName= user name
 NotBlank.signupForm.userName=Please enter {0}
 
 
 # Birthday validation
-signupForm.birthday= Birthday
+signupForm.birthday= birthday
 typeMismatch.signupForm.birthday=Please enter in MM/DD/YYYY format
 NotNull.signupForm.birthday=Please enter your {0}
 
